--- a/smoky/scss/base/_fonts.scss
+++ b/smoky/scss/base/_fonts.scss
@@ -11,6 +11,15 @@
 	url('../fonts/Uni_Sans_Thin.svg#Uni_Sans_Thin') format('svg');
 }
 
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto.eot');
+	src: url('../fonts/Roboto.eot?#iefix') 
+	format('embedded-opentype'), url('../fonts/Roboto.woff') 
+	format('woff'), url('../fonts/Roboto.ttf') format('truetype'), 
+	url('../fonts/Roboto.svg#Roboto') format('svg');
+}
+
 /*@font-face {
 	font-family: 'NP';
 	src: url('../fonts/Nautilus.otf');
