--- a/smoky/scss/base/_fonts.scss
+++ b/smoky/scss/base/_fonts.scss
@@ -12,7 +12,7 @@
 }
 
 @font-face {
-	font-family: 'Roboto';
+	font-family: 'Roboto-reg';
 	src: url('../fonts/Roboto.eot');
 	src: url('../fonts/Roboto.eot?#iefix') 
 	format('embedded-opentype'), url('../fonts/Roboto.woff') 
