--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -2803,15 +2803,12 @@ h3{
 		font-size: 14px;
 		font-weight: 300;
 	}
-	&__p{
+	p{
 		color: #2d2d2d;
-		font-family: 'Roboto', sans-serif;
+		font-family: 'Roboto-reg', sans-serif;
 		font-size: 14px;
 		font-weight: 300;
 		line-height: 18px;
-		b{
-			font-weight: 500;
-		}
 	}
 	.showmore{
 		margin-top: 10px;
