--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -901,7 +901,7 @@ header{
 		padding: 20px 0;
 		width: 288px;
 		background: #fff;
-		position: fixed;
+		position: absolute;
 		top: 62px;
 		left: 0;
 		z-index: 15;
