--- a/chemodan__shop/css/style.css
+++ b/chemodan__shop/css/style.css
@@ -808,6 +808,335 @@ h3 {
   cursor: pointer;
 }
 
+/*Sidefilters*/
+.sidefilters {
+  width: 230px;
+  padding-left: 45px;
+  display: none;
+}
+.sidefilters__item {
+  padding: 6px 0;
+  border-bottom: 1px solid #e8e8e8;
+}
+.sidefilters__sm {
+  font: 400 13px "Roboto",sans-serif;
+  text-decoration: underline;
+  color: #3498db;
+}
+.sidefilters__title {
+  color: #1c1c1c;
+  font: 400 12px "Roboto",sans-serif;
+  padding: 0;
+  margin-bottom: 3px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sidefilters__more i {
+  font-size: 14px !important;
+  position: static;
+}
+.sidefilters__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  margin-top: 3px;
+}
+.sidefilters__btn {
+  height: 21px;
+  font: 400 13px "Roboto",sans-serif;
+  text-transform: uppercase;
+  border-radius: 3px;
+  border: 1px solid #3498db;
+  padding: 0 7px;
+  transition: 0.2s ease-in-out;
+}
+.sidefilters__btn_1 {
+  background: #fff;
+  color: #3498db;
+}
+.sidefilters__btn_1:hover {
+  background: #3498db;
+  color: #fff;
+}
+.sidefilters__btn_2 {
+  background: #3498db;
+  color: #fff;
+}
+.sidefilters__btn_2:hover {
+  background: #01385f;
+  border: 1px solid #01385f;
+}
+
+.allfilters {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.allfilters .filterbar__item {
+  margin-bottom: 4px;
+  margin-right: 4px;
+}
+.allfilters__item_check {
+  display: inline-block;
+  width: 100%;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkboxlabel {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding-left: 22px;
+  margin-right: 15px;
+  font: 400 13px "Roboto",sans-serif;
+  color: #1c1c1c;
+}
+.checkboxlabel:before {
+  content: "";
+  border-radius: 2px;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #3498db;
+  margin-right: 8px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.checkbox:checked + .checkboxlabel:before {
+  content: "\f00c";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  color: #fff;
+  font-size: 10px;
+  background: #3498db;
+  text-align: center;
+  line-height: 12px;
+  box-shadow: 0 0 0 1px white inset;
+}
+
+/*UI slider*/
+#slider, #slider2, #slider3, #slider4, #slider5, #slider6 {
+  width: 172px;
+  margin-left: 5px;
+}
+
+.ui-slider {
+  position: relative;
+}
+
+.ui-slider .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  border: 2px solid #fff;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  background: #3498db;
+}
+
+.ui-slider .ui-slider-range {
+  position: absolute;
+  z-index: 1;
+  font-size: .7em;
+  display: block;
+  border: 0;
+  overflow: hidden;
+}
+
+.ui-slider-horizontal {
+  height: 2px;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+  top: -6px;
+  margin-left: -6px;
+}
+
+.ui-slider-horizontal .ui-slider-range {
+  top: 0;
+  height: 100%;
+}
+
+.ui-slider-horizontal .ui-slider-range-min {
+  left: 0;
+}
+
+.ui-slider-horizontal .ui-slider-range-max {
+  right: 0;
+}
+
+.ui-widget-content {
+  border: 0;
+  background: #a4a4a4;
+}
+
+.ui-widget-header {
+  border: 0;
+  background: #3498db;
+}
+
+.ui-corner-all {
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.pricefilter__title {
+  margin-bottom: 11px;
+}
+.pricefilter__cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 9px;
+  padding: 0;
+}
+.pricefilter__line {
+  width: 26px;
+  height: 1px;
+  background: #aeaeae;
+}
+.pricefilter__input {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.pricefilter__input span {
+  color: #a4a4a4;
+  font: 400 12px "Roboto",sans-serif;
+  margin-right: 5px;
+}
+.pricefilter__input input {
+  width: 45px;
+  height: 17px;
+  color: #a4a4a4;
+  font: 400 12px "Roboto",sans-serif;
+  border-radius: 3px;
+  border: 1px solid #a4a4a4;
+  padding: 0 4px;
+}
+
+.colorbox__cont {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.colorbox_1 {
+  border: 1px solid #a2a2a2 !important;
+  background: #fff;
+  cursor: pointer;
+}
+.colorbox_1 i {
+  color: #000 !important;
+}
+.colorbox_2 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #000000;
+  cursor: pointer;
+}
+.colorbox_3 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #1abc9c;
+  cursor: pointer;
+}
+.colorbox_4 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #3498db;
+  cursor: pointer;
+}
+.colorbox_5 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #2ecc71;
+  cursor: pointer;
+}
+.colorbox_6 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #8e44ad;
+  cursor: pointer;
+}
+.colorbox_7 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #f1c40f;
+  cursor: pointer;
+}
+.colorbox_8 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #e67e22;
+  cursor: pointer;
+}
+.colorbox_9 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #e74c3c;
+  cursor: pointer;
+}
+.colorbox_10 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #fff324;
+  cursor: pointer;
+}
+.colorbox_10 i {
+  color: #000 !important;
+}
+.colorbox_11 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #01385f;
+  cursor: pointer;
+}
+.colorbox_12 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #f655a0;
+  cursor: pointer;
+}
+.colorbox_13 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #a91c5f;
+  cursor: pointer;
+}
+.colorbox_14 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #4d301a;
+  cursor: pointer;
+}
+.colorbox_15 {
+  border-bottom: 1px solid #a2a2a2;
+  background: #7f8c8d;
+  cursor: pointer;
+}
+.colorbox__item {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  border: 0;
+  margin-right: 2px;
+  margin-bottom: 2px;
+}
+.colorbox__item i {
+  display: none;
+  color: #fff;
+}
+.colorbox__item_active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.colorbox__item_active i {
+  font-size: 11px;
+  display: inline-block;
+}
+
+/*Sidefilters end*/
 /*Nav menu and slider*/
 .maincont {
   width: 920px;
@@ -856,7 +1185,7 @@ h3 {
 
 .dropdown {
   position: absolute;
-  z-index: 3;
+  z-index: 11;
   left: 0px;
   top: 35px;
   width: 920px;
@@ -1837,6 +2166,311 @@ h3 {
 }
 
 /*Modal end*/
+/*Goods page*/
+/*Mainbox*/
+.mainbox {
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+.mainbox__goods {
+  width: 100%;
+  max-width: 880px;
+}
+
+/*Mainbox end*/
+/*Breadcrumbs*/
+.breadcrumbs {
+  margin-bottom: 10px;
+}
+.breadcrumbs ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.breadcrumbs__link {
+  font: 400 12px "Roboto",sans-serif;
+  color: #1c1c1c;
+  margin: 0 2px;
+}
+.breadcrumbs__link:hover {
+  color: #3498db;
+}
+.breadcrumbs__link i {
+  font-size: 12px;
+  color: #1c1c1c;
+}
+
+/*Breadcrumbs end*/
+/*Filterbox*/
+.filterbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/*Filterbox end*/
+/*Filterbar*/
+.filterbar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.filterbar__item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid #ababab;
+  border-radius: 10px;
+  position: relative;
+  padding-left: 19px;
+  cursor: pointer;
+  margin-right: 5px;
+}
+.filterbar__item span {
+  font: 400 13px "Roboto",sans-serif;
+  color: #ababab;
+  display: inline-block;
+  padding: 0 4px 2px;
+}
+.filterbar__item_np {
+  padding-left: 0;
+}
+.filterbar__item_round {
+  justify-content: center;
+  width: 17px;
+}
+.filterbar__item_round span {
+  padding: 0;
+}
+.filterbar__item:hover {
+  border-color: #3498db;
+}
+.filterbar__item:hover span {
+  color: #3498db;
+}
+.filterbar__item:hover .filterbar__img {
+  border-color: #3498db;
+}
+.filterbar__item:hover .filterbar__img i {
+  color: #3498db;
+}
+.filterbar__img {
+  position: absolute;
+  left: -1px;
+  top: -1px;
+  height: 19px;
+  width: 19px;
+  border: 1px solid #ababab;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.filterbar__img i {
+  color: #ababab;
+  font-size: 13px;
+}
+.filterbar__img b {
+  font: 700 13px "Roboto",sans-serif;
+  color: #ababab;
+}
+.filterbar__remove {
+  width: 6px;
+  margin-right: 7px;
+}
+
+/*Filterbar end*/
+/*Goods*/
+.goods {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.goods .product {
+  margin: 0 0 18px;
+}
+
+/*Goods pager*/
+.goodpager {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.goodpager__prev, .goodpager__next {
+  width: 29px;
+  height: 29px;
+  border-radius: 100%;
+  border: 1px solid #d1d1d1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 3px;
+  cursor: pointer;
+}
+.goodpager__prev i, .goodpager__next i {
+  font-size: 20.77px;
+  color: #d1d1d1;
+}
+.goodpager__prev:hover, .goodpager__next:hover {
+  border-color: #3498db;
+}
+.goodpager__prev:hover i, .goodpager__next:hover i {
+  color: #3498db;
+}
+.goodpager__main {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+.goodpager__main a {
+  width: 29px;
+  height: 29px;
+  border-radius: 100%;
+  border: 1px solid #d1d1d1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: 400 17.77px "Roboto",sans-serif;
+  color: #d1d1d1;
+  margin: 0 3px;
+}
+.goodpager__main a:hover {
+  border-color: #3498db;
+  color: #3498db;
+}
+
+.sortby {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 16px;
+}
+.sortby__p {
+  font: 400 13px "Roboto",sans-serif;
+  color: #ababab;
+}
+
+.select2 {
+  width: 165px;
+  height: 19px;
+  border: 1px solid #ababab;
+  border-radius: 10px;
+  list-style: none;
+  cursor: pointer;
+  display: flex;
+  display: inline-block;
+  background: #fff;
+  vertical-align: top;
+  position: relative;
+  margin-left: 10px;
+  z-index: 10;
+}
+.select2__toggled {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.select2 i {
+  font-size: 13px;
+  color: #ababab;
+  position: absolute;
+  right: 7px;
+  top: 2px;
+}
+.select2__item {
+  z-index: 6;
+  padding-left: 10px;
+  border: 1px solid #c7c7c7;
+  border-top: 0;
+  height: 17px;
+  background: #fff;
+  color: #ababab;
+  font: 400 13px "Roboto",sans-serif;
+  display: none;
+}
+.select2__item_init {
+  z-index: 6;
+  padding-left: 10px;
+  border: 0;
+  border-top: 0;
+  height: 17px;
+  background: #fff;
+  color: #ababab;
+  font: 400 13px "Roboto",sans-serif;
+  border-radius: 10px;
+}
+.select2__item:not(.select__item_init) {
+  margin-left: -1px;
+  width: 165px;
+}
+
+/*Goods end*/
+/*Interesting and viewed*/
+.interesting, .viewed {
+  margin-bottom: 25px;
+}
+.interesting .product, .viewed .product {
+  width: 210px;
+}
+.interesting .product__name, .viewed .product__name {
+  font-size: 12px;
+  height: 35px;
+}
+.interesting .product__tip, .viewed .product__tip {
+  padding: 1.5px 8px 2.5px;
+  font-size: 12.5px;
+}
+.interesting .product__img, .viewed .product__img {
+  height: 165px;
+}
+.interesting .product__img img, .viewed .product__img img {
+  height: 100%;
+}
+.interesting .product__img_2 img, .viewed .product__img_2 img {
+  width: 60%;
+  height: auto;
+}
+.interesting .product__price, .viewed .product__price {
+  font-size: 12px;
+}
+.interesting .product__btn, .viewed .product__btn {
+  font-size: 12px;
+  height: 32px;
+}
+.interesting .product__left span, .interesting .product__right span, .viewed .product__left span, .viewed .product__right span {
+  font-size: 9.75px;
+}
+.interesting .product__color, .interesting .product__size, .viewed .product__color, .viewed .product__size {
+  width: 14px;
+  height: 14px;
+}
+.interesting .product__color i, .viewed .product__color i {
+  font-size: 10px;
+}
+.interesting .product__stars img, .viewed .product__stars img {
+  width: 11.25px;
+}
+.interesting .product__compare, .viewed .product__compare {
+  width: 28px;
+  height: 20px;
+  right: 35px;
+}
+.interesting .product__compare i, .viewed .product__compare i {
+  width: 15px;
+}
+.interesting .product__favorite, .viewed .product__favorite {
+  width: 28px;
+  height: 20px;
+}
+.interesting .product__favorite i, .viewed .product__favorite i {
+  width: 19px;
+  height: 19px;
+}
+
+/*Interesting and viewed end*/
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   body {
     min-height: 100hv;
