--- a/chemodan__shop/css/style.css
+++ b/chemodan__shop/css/style.css
@@ -1438,7 +1438,34 @@ h3 {
 .banner {
   width: 825px;
   height: 233px;
-  overflow: hidden;
+  /*overflow: hidden;*/
+}
+.banner .slick-track {
+  padding: 0 !important;
+}
+.banner .slick-slide {
+  outline: none;
+}
+.banner .slick-list {
+  max-height: 233px;
+}
+.banner .slick-dots {
+  position: absolute;
+  right: -94px;
+  top: 0;
+  width: 94px;
+  z-index: 67;
+  list-style: none;
+}
+.banner .slick-dots li {
+  height: 38.666px;
+}
+.banner .slick-dots button {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  background: transparent;
+  text-indent: 9999px;
 }
 
 /*Banner categories*/
@@ -1986,7 +2013,7 @@ h3 {
   position: fixed;
   display: none;
   overflow: hidden;
-  top: 0;
+  top: 15%;
   left: 50%;
   background: #ffffff;
   z-index: 17;
