--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -834,7 +834,34 @@ h3{
 .banner{
 	width: 825px;
 	height: 233px;
-	overflow: hidden;
+	/*overflow: hidden;*/
+	.slick-track{
+		padding: 0 !important;
+	}
+	.slick-slide{
+		outline: none;
+	}
+	.slick-list{
+		max-height: 233px;
+	}
+	.slick-dots{
+		position: absolute;
+    	right: -94px;
+    	top: 0;
+    	width: 94px;
+    	z-index: 67;
+    	list-style: none;
+    	li{
+    		height: 38.666px;
+    	}
+    	button{
+    		width: 100%;
+    		height: 100%;
+    		border: 0;
+    		background: transparent;
+    		text-indent: 9999px;
+    	}
+	}
 }
 /*Banner categories*/
 .bannercat{
@@ -1396,7 +1423,7 @@ h3{
 	position: fixed;
 	display: none;
 	overflow: hidden;
-	top: 0;
+	top: 15%;
 	left: 50%;
 	background: #ffffff;
 	z-index: 17;
